@@ -438,6 +438,12 @@ description=<<EOT
 The button text will appear on the registration page submit button
 EOT
 
+[registration.nbregpages]
+type=numeric
+description=<<EOT
+The number of registration pages to show to the user
+EOT
+
 [passthroughs]
 description=<<EOT
 This section allows you to create passthroughs to HTML content or remote addresses/networks.  Here's an example:
