@@ -94,6 +94,7 @@ The Stinger utility could then be accessed at https://pfhostname/proxies/tools/s
   <a href='registration.html#expire_session'>expire_session</a><br>
   <a href='registration.html#expire_window'>expire_window</a><br>
   <a href='registration.html#maxnodes'>maxnodes</a><br>
+  <a href='registration.html#nbregpages'>nbregpages</a><br>
   <a href='registration.html#queuesize'>queuesize</a><br>
   <a href='registration.html#range'>range</a><br>
   <a href='registration.html#skip_deadline'>skip_deadline</a><br>
