@@ -44,6 +44,10 @@ If expire_mode is set to "window", this is length of time after registration tha
 <b>maxnodes</b> <i>(numeric)</i><br>
 Default: 0<br>
 If defined, the maximum number of nodes that can be registered to a single PID.<p>
+<a name=nbregpages></a>
+<b>nbregpages</b> <i>(numeric)</i><br>
+Default: 1<br>
+The number of registration pages to show to the user.<p>
 <a name=queuesize></a>
 <b>queuesize</b> <i>(numeric)</i><br>
 Default: 0<br>
