@@ -23,38 +23,14 @@
 
 <p align="center"><font face="Arial" size="+1"> <b>[% txt_page_header %]</b></font></p>
 
-<p align="justify"><font face="Arial">
-[% txt_all_systems_must_be_registered %]
-</p>
-<p align="justify"><font face="Arial">
-[% txt_to_complete %]
-</p>
-<p align="justify"><font face="Arial">
-[% txt_msg_aup %]
-</p>
-<p align="center"><font face="Arial">
-<script language="javascript"><!--
-document.writeln("<a href='' onClick=\"window.open('/content/index.php?admin=yes&template=aup','mywindow','width=800,height=600,scrollbars=yes')\">[% txt_aup %]</a>");
-//--></script>
-<noscript>
-  <a href="/content/index.php?admin=yes&template=aup" target="_blank">[% txt_aup %]</a>
-</noscript>
-</p>
-<p align="center"><font face="Arial">
-[% txt_help %]
-<ul>
-  [%  FOREACH txt_help_info IN list_help_info %]
-  <li>[% txt_help_info.name %]: [% txt_help_info.value %]</li>
-  [%  END %]
-</ul>
-</font>
-</p>
+
+[% INCLUDE $reg_page_content_file %]
 
       </td>
     </tr>
     <tr align="center">
 	 <td align="center">
-      <form method="post" action="/cgi-bin/register.cgi?mode=register">
+      <form method="post" action="[% form_action %]">
           <input type="hidden" name="destination_url" value="[% destination_url %]">
           <input type="submit" name="submit" value="[% button_text %]">
         </form>
