@@ -57,6 +57,8 @@
           (http://www.packetfence.org/mantis/view.php?id=402)
         removed 'AUP' violation
           (http://www.packetfence.org/mantis/view.php?id=360)
+        add registration.nbregpages configuration parameter
+          (http://www.packetfence.org/mantis/view.php?id=403)
 
 
 1.7.3
